force-app/main/default/objects/Retail_Order_Product__c/Retail_Order_Product__c.object-meta.xml
<CustomObject>
    <label>Retail Order Product</label>
    <nameField>
        <displayFormat>ROP-{0000}</displayFormat>
        <label>Retail Order Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Order Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>