force-app/main/default/objects/Retail_Order_Product__c/fields/Hole_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Hole_Spacing__c</fullName>
    <label>Hole Spacing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>