force-app/main/default/objects/Retail_Order_Product__c/fields/Kg_Rate__c.field-meta.xml
<CustomField>
    <fullName>Kg_Rate__c</fullName>
    <label>Kg Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>