force-app/main/default/objects/Retail_Order_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail Order Products</relationshipLabel>
    <relationshipName>Retail_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>