force-app/main/default/objects/Retail_Order_Product__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Retail_Product_Group__c</referenceTo>
    <relationshipLabel>Retail Order Products</relationshipLabel>
    <relationshipName>Retail_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>