force-app/main/default/objects/Retail_Order_Product__c/fields/Retail_Order__c.field-meta.xml
<CustomField>
    <fullName>Retail_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Order</label>
    <referenceTo>Retail_Order__c</referenceTo>
    <relationshipLabel>Retail Order Products</relationshipLabel>
    <relationshipName>Retail_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>